@startuml comm_class_diagram

skinparam classAttributeIconSize 0
skinparam linetype ortho

package "comm (interface)" {

  enum ProtocolType {
    udp
    unspecified
  }

  enum SendMode {
    blocking
    nonBlocking
    periodic
    timed
  }

  enum PayloadType {
    data
    command
  }

  enum CommandType {
    start
    stop
  }

  class "Payload<T>" as Payload_T {
    +type : PayloadType
    +content : T
    +serialize() : vector<uint8_t>
  }

  enum OutputType {
    ok
    error
    timeout
  }

  enum CommunicationError {
    none
    invalidIp
    invalidPort
    socketCreationFailed
    socketOptionFailed
    bindFailed
    connectionFailed
    sendFailed
    sendBufferFull
    sendMessageTooLarge
    sendInterrupted
    sendNotConnected
    partialSend
    sendPayloadEmpty
    receiveFailed
    receiveBufferTooSmall
    receivePayloadEmpty
    closeFailed
    notInitialized
    alreadyInitialized
    invalidConfiguration
    unsupportedOperation
    delayError
    schedulerTaskNotFound
    invalidArgumentPeriodic
    unknown
  }

  struct OperationResult {
    +output : OutputType
    +error : CommunicationError
  }

  interface ICommunication {
    +{abstract} initialize() : OperationResult
    +{abstract} connect() : OperationResult
    +{abstract} send(data : const uint8_t*, size : size_t, mode : SendMode, delayMs : uint32_t) : OperationResult
    +{abstract} receive(buffer : uint8_t*, bufferSize : size_t, bytesReceived : size_t&) : OperationResult
    +{abstract} close() : OperationResult
    +{abstract} lastSendResult() : OperationResult
    +{abstract} timeout() : uint32_t
  }

  class CommunicationBuilder {
    -m_protocol : ProtocolType
    -m_ip : string
    -m_port : uint16_t
    -m_timeoutMs : uint32_t
    -m_hasProtocol : bool
    +CommunicationBuilder()
    +withProtocol(protocol : ProtocolType) : CommunicationBuilder&
    +withIp(ip : string) : CommunicationBuilder&
    +withPort(port : uint16_t) : CommunicationBuilder&
    +withTimeout(timeoutMs : uint32_t) : CommunicationBuilder&
    +build() : unique_ptr<ICommunication>
  }
}

package "comm (impl)" {

  class CommunicationBase {
    -m_ip : string
    -m_port : uint16_t
    -m_initialized : bool
    -m_socketFd : int
    -m_timeoutMs : uint32_t
    +CommunicationBase(ip : string, port : uint16_t, timeoutMs : uint32_t)
    +timeout() : uint32_t
    +close() : OperationResult
    #applyDelay(delayMs : uint32_t) : void
    #socketFdRef() : int&
    #isInitialized() : bool
    #markInitialized(value : bool) : void
    #makeAddress() : sockaddr_in
    #{static} isValidPort(port : uint16_t) : bool
    #validateConfiguration() : OperationResult
    #{static} isValidIp(ip : string) : bool
  }

  class Udp {
    -m_sendAdapter : SendAdapter
    -m_scheduler : SendScheduler<SendAdapter>
    -m_periodicTaskId : TaskId
    -m_sendMutex : mutex
    +Udp(ip : string, port : uint16_t, timeoutMs : uint32_t)
    +~Udp()
    +initialize() : OperationResult
    +connect() : OperationResult
    +send(data : const uint8_t*, size : size_t, mode : SendMode, delayMs : uint32_t) : OperationResult
    +receive(buffer : uint8_t*, bufferSize : size_t, bytesReceived : size_t&) : OperationResult
    +lastSendResult() : OperationResult
    +stopPeriodicSend() : void
    -sendImmediate(data : const uint8_t*, size : size_t) : OperationResult
    -sendNonBlocking(data : const uint8_t*, size : size_t, delayMs : uint32_t) : OperationResult
    -{static} mapSendError(errnoValue : int) : OperationResult
    -startPeriodicSend(data : const uint8_t*, size : size_t, intervalMs : uint32_t) : OperationResult
  }

  class SendAdapter <<struct>> {
    -owner : Udp&
    +send(data : const uint8_t*, size : size_t) : OperationResult
  }

  class "SendScheduler<T>" as SendScheduler_T {
    -m_communication : T&
    -m_queue : priority_queue<Item>
    -m_tasks : map<TaskId, TaskInfo>
    -m_mutex : mutex
    -m_cv : condition_variable
    -m_worker : thread
    -m_stop : bool
    -m_nextTaskId : TaskId
    -m_nextSequence : uint64_t
    -m_resultMutex : mutex
    -m_lastResult : OperationResult
    +SendScheduler(communication : T&)
    +~SendScheduler()
    +start() : OperationResult
    +stop() : OperationResult
    +sendWithDelay(data : const uint8_t*, size : size_t, delayMs : uint32_t) : OperationResult
    +sendPeriodically(data : const uint8_t*, size : size_t, initialDelayMs : uint32_t, periodMs : uint32_t, outTaskId : TaskId&) : OperationResult
    +cancel(taskId : TaskId) : OperationResult
    +cancelAll() : OperationResult
    +lastResult() : OperationResult
    -schedule(data : const uint8_t*, size : size_t, delayMs : uint32_t, periodMs : uint32_t, periodic : bool, outTaskId : TaskId&) : OperationResult
    -workerLoop() : void
  }
}

package "comm::utils" {

  class SocketUtils {
    +{static} isValidPort(port : uint16_t) : bool
    +{static} isValidIp(ip : string) : bool
    +{static} closeSocket(fd : int&) : OperationResult
    +{static} setReceiveTimeout(fd : int, timeoutMs : int) : bool
    +{static} setSendTimeout(fd : int, timeoutMs : int) : bool
  }
}

Payload_T --> PayloadType

OperationResult --> OutputType
OperationResult --> CommunicationError

CommunicationBase --|> ICommunication
Udp --|> CommunicationBase

CommunicationBuilder ..> ICommunication : <<creates>>
CommunicationBuilder ..> Udp : <<instantiates>>
CommunicationBuilder --> ProtocolType

CommunicationBase ..> SocketUtils : <<uses>>
Udp ..> SocketUtils : <<uses>>

Udp *-- SendAdapter
Udp *-- SendScheduler_T
SendAdapter ..> Udp : <<delegates to>>
SendScheduler_T ..> OperationResult : <<returns>>

ICommunication ..> OperationResult : <<returns>>
ICommunication ..> SendMode : <<uses>>

@enduml
